# px4-ros2-sitl-lab

./: .gitignore  README.md
analysis/: analyze_figure8.py  analyze_offboard_hover.py  analyze_trajectory_suite.py  audit_experiment_artifacts.py  compare_control_modes.py  compare_figure8_planar_ff_gain.py  generate_gifs.py  generate_summary_visuals.py  summarize_all_tracking_experiments.py
docs/: control_improvement.md  environment_setup.md  offboard_control.md  project_plan.md  project_structure.md  reproducibility.md  safety_checklist.md  sim2real_notes.md  trajectory_tracking.md  visual_recording.md
logs/: figure8_first_success.csv  offboard_hover_first_success.csv  offboard_trajectory_circle_baseline_20260629_235707.csv  offboard_trajectory_circle_feedforward_20260630_003510.csv  offboard_trajectory_figure8_baseline_20260630_115423.csv  offboard_trajectory_figure8_feedforward_20260630_120214.csv  offboard_trajectory_figure8_planar_ff_g0p5_20260630_130443.csv  offboard_trajectory_figure8_planar_ff_g0p8_20260630_130300.csv  offboard_trajectory_figure8_planar_ff_g1_20260630_130606.csv  offboard_trajectory_square_baseline_20260630_120601.csv  offboard_trajectory_square_smooth_20260630_120804.csv  run_circle_baseline_20260629_235338.txt  run_circle_baseline_20260629_235505.txt  run_circle_feedforward_20260630_003508.txt  run_figure8_baseline_20260630_115422.txt  (+3 more)
media/: README.md
ros2/px4_offboard_lab/: package.xml  setup.cfg  setup.py
ros2/px4_offboard_lab/px4_offboard_lab/: __init__.py  offboard_figure8.py  offboard_hover.py  offboard_trajectory.py
(+36 files in other folders)
